Bug 184565 - B&W converter : Clicking to left and right of slider (strength of green/red/orange filter) doesn't move slider
Summary: B&W converter : Clicking to left and right of slider (strength of green/red/o...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: 4.2.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-16 22:31 UTC by Joe Biden
Modified: 2009-06-21 03:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joe Biden 2009-02-16 22:31:04 UTC
Version:           0.10.0-rc2 (using 4.2.00 (KDE 4.2.0), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.27-11-generic

Small detail, but different than last version.

Clicking to the right and left of a slider (say, on the strength of green/red/orange filter, doesn't move slider. One has to grab the slider and move it, or set the strength in the space for it.
Comment 1 Joe Biden 2009-02-16 22:31:47 UTC
Also, bugzilla threw this error:

An error occured while validating flags: Can't call method "error" on an undefined value at Bugzilla/Flag.pm line 550.
Comment 2 caulier.gilles 2009-02-17 06:13:38 UTC
Sound like another Kdelib (KIntNumInput / KDoubleNumInput) bug.

Somebody can confirm ?

Gilles Caulier
Comment 3 Andi Clemens 2009-02-17 10:07:39 UTC
Which filter? I can not confirm this...
Comment 4 caulier.gilles 2009-02-17 10:13:56 UTC
Color Balance ?

Gilles
Comment 5 Andi Clemens 2009-02-17 10:29:06 UTC
It is working... maybe it doesn't look like it is moving because it has many steps. But clicking changes the value...
Comment 6 Joe Biden 2009-02-17 17:44:24 UTC
Why do guys assume others are dumb? It's an extremely annoying habit.

From my understanding, it has 5 steps 1, 2, 3, 4, and 5. It is under the Color -> Black and White -> Lens Filters (now choose a filter and click to the left and right on the slider). 

To reiterate, this WORKED IN THE LAST VERSION, so it's not as if I haven't operated a slider in this fashion before. Of course, the last version was digikam 0.9.x, under kde 3, so if it comes from kdelibs, it's from there that the problem is...
Comment 7 Andi Clemens 2009-02-17 18:08:18 UTC
(In reply to comment #6)
> Why do guys assume others are dumb? It's an extremely annoying habit.
Nobody does, but you just told us sliders are not working, but they do.
You have to be more precise... and now that you told us what exactly is not working, I can confirm it, too.

And a lot of people have problems we don't have due to packaging problems... so if somebody creates a bugreport it doesn't automatically mean that it is valid.

Again now I can confirm it.
Comment 8 Andi Clemens 2009-02-17 19:52:19 UTC
This must be a KDElibs bug, because when I set the range of the slider to 1...50, it is working.
Gilles, can you confirm this by increasing the range on your computer?

Andi
Comment 9 Andi Clemens 2009-02-17 20:03:37 UTC
The same can be found in "Color Effects", which also has sliders with a low range.
Those input controls behave weird anyway. Using the scrollwheel on the slider increases sometimes by 3, sometimes more, but used on the integer input it increases by 1 (which is the value we defined).
Comment 10 caulier.gilles 2009-02-17 21:16:57 UTC
yes, i confirm the disfunction.

gilles
Comment 11 Andi Clemens 2009-04-07 19:37:16 UTC
Hmm this is some kdelibs issue, will re-assign it now.
Comment 12 Christoph Feck 2009-06-21 03:10:48 UTC
SVN commit 984542 by cfeck:

Do not set zero pageStep

BUG: 184565


 M  +1 -1      knuminput.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=984542