Do not set zero pageStep

BUG: 184565

svn path=/trunk/KDE/kdelibs/; revision=984542